src/test/deca/syntax/invalid/sansObjet/BadPrintx2.deca
{
    printx("Hello 2020",'Hello');
}